--- a/site.yml
+++ b/site.yml
@@ -8,6 +8,19 @@
         - linux
     sensu_cluster: True
 
+    etcd_advertise_client_urls: "http://{{ ansible_enp0s8.ipv4.address }}:2379"
+    etcd_initial_advertise_peer_urls: "http://{{ ansible_enp0s8.ipv4.address }}:2380"
+    etcd_initial_cluster:
+      - "backend-1=http://192.168.88.100:2380"
+      - "backend-2=http://192.168.88.101:2380"
+      - "backend-3=http://192.168.88.102:2380"
+
+    etcd_initial_cluster_state: "new" # new or existing
+    etcd_initial_cluster_token: " "
+    etcd_listen_client_urls: "http://{{ ansible_enp0s8.ipv4.address }}:2379"
+    etcd_listen_peer_urls: "http://0.0.0.0:2380"
+    etcd_name: "{{ ansible_hostname }}"
+
   roles:
     - role: ansible-sensu-go
 
