--- a/site.yml
+++ b/site.yml
@@ -4,6 +4,10 @@
 
   vars:
     server: True
+
+    slack: True
+    slack_webhook_url: https://hooks.slack.com/services/xxx
+    slack_channel: "@elias"
     sensu_client_subs:
         - linux
     sensu_cluster: True
