--- a/site.yml
+++ b/site.yml
@@ -4,12 +4,10 @@
 
   vars:
     server: true
-
     slack: true
     slack_webhook_url: https://hooks.slack.com/services/xxx
     slack_channel: "@elias"
-    sensu_client_subs:
-        - linux
+
     sensu_cluster: true
 
     etcd_advertise_client_urls: "http://{{ ansible_enp0s8.ipv4.address }}:2379"
@@ -24,26 +22,20 @@
     etcd_listen_client_urls: "http://{{ ansible_enp0s8.ipv4.address }}:2379"
     etcd_listen_peer_urls: "http://0.0.0.0:2380"
     etcd_name: "{{ ansible_hostname }}"
-
-    backend_url:
-        - "ws://192.168.88.100:8081"
-        - "ws://192.168.88.101:8081"
-        - "ws://192.168.88.102:8081"
+    etcd_peer_client_cert_auth: true
 
   roles:
     - role: ansible-sensu-go
 
-- hosts: sensu-agent
+- hosts: all
   become: true
   vars:
-    server: False
-    sensu_client_subs:
-        - linux
+    ssl_conf: true
 
     backend_url:
-        - "ws://192.168.88.100:8081"
-        - "ws://192.168.88.101:8081"
-        - "ws://192.168.88.102:8081"
+        - "wss://192.168.88.100:8081"
+        - "wss://192.168.88.101:8081"
+        - "wss://192.168.88.102:8081"
 
   roles:
     - role: ansible-sensu-go
